# shopify-nano-sre

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/action/: README.md  action.yml
.github/workflows/: ci.yml  example-audit.yml  release.yml
docs/: DEVELOPMENT.md  architecture.md  copilot-tasks.md  gemini-research.md  roadmap.md
docs/demo/: baseline_report.md
docs/examples/: .env.ci.example  .env.docker.example  .env.local.example  docker-compose.yml
docs/tutorials/: ci-cd-integration.md  custom-skills.md  getting-started.md
src/nano_sre/: __init__.py  cli.py
src/nano_sre/agent/: __init__.py  alerter.py  core.py  diagnosis.py  privacy.py  reporter.py  trigger.py
src/nano_sre/config/: settings.py
src/nano_sre/db/: store.py
src/nano_sre/skills/: __init__.py  headless_probe.py  mcp_advisor.py  pixel_auditor.py  shopify_doctor.py  shopify_shopper.py  visual_auditor.py
src/nano_sre/utils/: llm.py  mcp.py  shopify.py
src/shopify_nano_sre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_alerter.py  test_cli.py  test_config.py  test_core.py  test_diagnosis.py  test_init.py  test_privacy.py  test_reporter.py  test_store.py  test_trigger.py
