[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-nano-sre"
version = "0.1.0"
description = "The open-source AI engineer that monitors your Shopify store 24/7"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shopify Nano-SRE Contributors", email = "oss@shopintegrations.com"}
]
maintainers = [
    {name = "SRE Team", email = "sre@shopintegrations.com"}
]
keywords = ["shopify", "monitoring", "ai", "playwright", "sre", "ecommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "sqlite-utils>=3.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Shop-Integrations/shopify-nano-sre"
Documentation = "https://github.com/Shop-Integrations/shopify-nano-sre/blob/main/docs/README.md"
Repository = "https://github.com/Shop-Integrations/shopify-nano-sre"
Issues = "https://github.com/Shop-Integrations/shopify-nano-sre/issues"
Changelog = "https://github.com/Shop-Integrations/shopify-nano-sre/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/Shop-Integrations/shopify-nano-sre"

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
nano-sre = "nano_sre.cli:main"

[tool.setuptools]
packages = ["nano_sre"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
